# simulador

./: .gitignore  README.md
simulador/: CMakeLists.txt
simulador/acessorios-cpp/: Amuleto.cpp  Capa.cpp  Colete.cpp  Flecha.cpp  Garfo.cpp  Katana.cpp  Machado.cpp  Martelo.cpp  ProtetorSolar.cpp
simulador/acessorios-hpp/: Amuleto.hpp  Capa.hpp  Colete.hpp  Flecha.hpp  Garfo.hpp  Katana.hpp  Martelo.hpp  ProtetorSolar.hpp
simulador/core-simulador-cpp/: Simulador.cpp
simulador/personagens-cpp/: DarthVader.cpp  Elsa.cpp  Groot.cpp  Simba.cpp  Tiao.cpp
simulador/personagens-hpp/: DarthVader.hpp  Elsa.hpp  Groot.hpp  Simba.hpp  Tiao.hpp
simulador/principal/: main.cpp
